--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.7"
-   
+
 services:
   mariadb:
     # https://hub.docker.com/_/mariadb?tab=description&page=1&ordering=last_updated 
@@ -11,17 +11,27 @@ services:
     environment:
       - MARIADB_ROOT_PASSWORD=mariadb
     networks:
-     - etaamb
+      - etaamb
     ports:
       - "6543:5432"
+
+  agent:
+    container_name: etaamb_steward
+    build:
+      context: ./utility
+      dockerfile: ./utility/Dockerfile
+    depends_on:
+      - mariadb
+    networks:
+      - etaamb
 
   etaamb:
     container_name: etaamb_php
     build:
-        context: .
-        # target: dev
-        dockerfile: ./Dockerfile
-        # command: ./misc/entrypoint.sh
+      context: .
+      # target: dev
+      dockerfile: ./Dockerfile
+      # command: ./misc/entrypoint.sh
     volumes:
       - ./etaamb:/app/etaamb
     environment:
@@ -31,8 +41,9 @@ services:
       - "8042:8042"
     depends_on:
       - mariadb
+      - agent
     networks:
-     - etaamb
+      - etaamb
 
 volumes:
   etaamb_data:
