:wrench: fixing prod docker env, adding managing tools

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -8,6 +8,7 @@ COPY ./agent/install-packages.sh .
 RUN ./install-packages.sh
 
 COPY ./resources /resources
+COPY ./etaamb /etaamb
 COPY ./agent ./
 
 
