--- a/etaamb/.htaccess
+++ b/etaamb/.htaccess
@@ -7,6 +7,7 @@
 	RewriteRule ^([a-z\/\.0-9\-]*)\.js$ $1.js [L,NC]
 	RewriteRule ^([a-z\/\.0-9\-]*)\.ico$ $1.ico [L,NC]
 	RewriteRule ^([a-z\/\.0-9\-_]*)\.png$ $1.png [L,NC]
+	RewriteRule ^([a-z\/\.0-9\-_]*)\.jpg$ $1.jpg [L,NC]
 
 	RewriteRule ^.*phpinfo.*$ phpinfo.php [L,NC]
 
