:wrench: adding more data fields to text parsing flow

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye-slim AS common-base
 # Etaamb Steward : tools and utils to manage and update the application
 
 WORKDIR /agent
-ENV PATH="/agent:$PATH"
+ENV PATH="/agent:/agent/misc:/agent/moniteur_import:$PATH"
 
 COPY ./agent/install-packages.sh .
 RUN  ./install-packages.sh
