--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     container_name: etaamb_steward
     build:
       context: ./
+      target: dev
       dockerfile: ./agent/Dockerfile
     volumes:
       - ./resources:/resources
