--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   mariadb:
     # https://hub.docker.com/_/mariadb?tab=description&page=1&ordering=last_updated 
@@ -35,6 +33,27 @@ services:
       - DB_PASSWORD=mariadb
       - DB_HOST=etaamb_db
       - DB_PORT=3306
+    depends_on:
+      - mariadb
+    networks:
+      - etaamb
+
+  pysteward:
+    container_name: etaamb_pysteward
+    build:
+      context: ./
+      target: dev
+      dockerfile: ./py_agent/Dockerfile
+    volumes:
+      - ./resources:/resources
+      - ./py_agent:/agent/
+    environment:
+      - DEBUG=true
+      - DB_HOST=etaamb_db
+      - DB_PORT=3306
+      - DB_USER=mariadb
+      - DB_PASSWORD=mariadb
+      - DB_DATA=etaamb
     depends_on:
       - mariadb
     networks:
