--- a/etaamb/.htaccess
+++ b/etaamb/.htaccess
@@ -15,7 +15,7 @@
 	RewriteRule ^$ index.php [L,NC]
 	RewriteRule ^tools/apc.php(.*)$ tools/apc.php$1 [L,NC]
 
-	RewriteCond %{REQUEST_URI} !mail\.php [NC]
+	RewriteCond %{REQUEST_URI} !907-mlai\.php [NC]
 	RewriteRule ^(.*)$ index.php?$1 [L,NC]
 </IfModule>
 
